Add a solver and an analyzer for a classical "bulls and cows" game

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,5 @@
-[package]
-name = "wordlie-solver"
-version = "0.1.2"
-authors = ["as.larin@hotmail.com"]
-edition = "2021"
-
-[dependencies]
-colored = "2"
-dialoguer = "0.10"
+[workspace]
+members = [
+    "bulls-and-cows",
+    "wordlie-solver"
+]
